修复auth